Different fix for mobile url bar jump. Managing history events for filter and generate. Some ui changes and code clean up. A lot more code clean up coming up.

--- a/md_scheduler/scheduler/static/css/scheduler.css
+++ b/md_scheduler/scheduler/static/css/scheduler.css
@@ -51,12 +51,21 @@ body {
     width: 100%;
 }
 
+.w-90-pc {
+    width: 90%;
+}
+
 .w-70-pc {
     width: 70%;
 }
 
 .w-3_7-em {
     width: 3.7em;
+}
+
+.mtb-2_em {
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .hidden {
@@ -269,7 +278,7 @@ input.form-control {
 
 /* The side navigation menu */
 .side-nav {
-    height: 100%;
+    height: 100vh;
     width: 0;
     position: fixed;
     z-index: 1;
@@ -288,7 +297,7 @@ input.form-control {
     line-height: 1;
     opacity: .5;
     top: 1.5em;
-    right: 0.7em;
+    right: 0.4em;
     z-index: 1500;
     font-size: 2.2em;
     color: #818181;
